test_scripts/errors/for_body_error.shm
for x in [1,2,3] { undefined_var; }
