test_scripts/errors/for_body_error.stderr
 1 | for x in [1,2,3] { undefined_var; }
                        ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
